Added a button to send the image over Bluetooth and made a function that is triggered by the button click. Button currently just changes text to "Hello". Text for button (default) is in the string value file.

--- a/ConnectedRoboSketch/app/src/main/res/layout/activity_cam.xml
+++ b/ConnectedRoboSketch/app/src/main/res/layout/activity_cam.xml
@@ -10,7 +10,19 @@
         android:id="@+id/imageView3"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="64dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/sendButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:onClick="sendImage"
+        android:text="@string/send_text"
+        app:layout_constraintBottom_toTopOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
