--- a/ConnectedRoboSketch/app/src/main/res/layout/activity_cam.xml
+++ b/ConnectedRoboSketch/app/src/main/res/layout/activity_cam.xml
@@ -26,4 +26,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/blueList"
+        android:layout_width="180dp"
+        android:layout_height="163dp"
+        android:alpha="1.0"
+        android:background="#EF0909"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/sendButton" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
