--- a/ConnectedRoboSketch/app/src/main/res/layout/activity_main.xml
+++ b/ConnectedRoboSketch/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -28,7 +27,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.267"
+        app:layout_constraintVertical_bias="0.268"
         app:srcCompat="@drawable/logo" />
 
     <RelativeLayout
@@ -44,19 +43,31 @@
         android:id="@+id/camerabutton"
         android:layout_width="124dp"
         android:layout_height="78dp"
-        android:layout_marginBottom="144dp"
+        android:layout_marginTop="192dp"
         android:text="Camera"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/drawingButton"
         android:layout_width="124dp"
         android:layout_height="78dp"
-        android:layout_marginBottom="40dp"
         android:text="Draw"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintBottom_toTopOf="@+id/galleryButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/camerabutton" />
+
+    <Button
+        android:id="@+id/galleryButton"
+        android:layout_width="124dp"
+        android:layout_height="78dp"
+        android:layout_marginBottom="56dp"
+        android:onClick="getGalleryImage"
+        android:text="Gallery"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent" />
