--- a/ConnectedRoboSketch/app/src/main/res/layout/activity_main.xml
+++ b/ConnectedRoboSketch/app/src/main/res/layout/activity_main.xml
@@ -44,27 +44,20 @@
         android:layout_width="124dp"
         android:layout_height="78dp"
         android:layout_marginTop="192dp"
+        android:layout_marginBottom="64dp"
         android:text="Camera"
+        app:layout_constraintBottom_toTopOf="@+id/galleryButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/drawingButton"
-        android:layout_width="124dp"
-        android:layout_height="78dp"
-        android:text="Draw"
-        app:layout_constraintBottom_toTopOf="@+id/galleryButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/camerabutton" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.349" />
 
     <Button
         android:id="@+id/galleryButton"
         android:layout_width="124dp"
         android:layout_height="78dp"
-        android:layout_marginBottom="56dp"
+        android:layout_marginBottom="128dp"
         android:onClick="getGalleryImage"
         android:text="Gallery"
         app:layout_constraintBottom_toBottomOf="parent"
